dodalem funkcje odpowiadajaca za dodawania itemow do bazy danych. Zaimplementowalem rowniez redirect dlatego nowe zadania sa od razu rowniez prezentowane na stronie.

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,10 @@
 <body>
     <h1>DO ZROBIENIA</h1>
 
-    <form action="">
+    <form action="/add" method="post">
         <div>
             <label for="title">Zadanie do wykonania</label>
             <input type="text" name="title" placeholder="Wpisz tytuł">
-
             <label for="desc">Opis zadania</label>
             <textarea name="descript" rows="4" cols="50"></textarea>
             <button type="submit">Dodaj</button>
@@ -19,13 +18,18 @@
     </form>
 
     {% for task in todo_list %}
-        <p> {{task.id}} | {{task.title}} <br> {{task.description}} </p>
+        <p> {{task.id}}. {{task.title}} <br> {{task.description}} </p>
 
         {% if task.complete == False %}
-            <span>DO ZROBIENIA</span>
+            <span>Do zrobienia</span>
         {% else %}
-            <span>ZROBIONE</span>
+            <span>Zrobione</span>
         {% endif %}
+
+        <a href="/">Zmień status</a>
+        <a href="/">Skasuj</a>
+
+
     {% endfor %}
 
 
