--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <div>
             <label for="title">Zadanie do wykonania</label>
             <input type="text" name="title" placeholder="Wpisz tytuł">
-            <label for="desc">Opis zadania</label>
+            <label for="descript">Opis zadania</label>
             <textarea name="descript" rows="4" cols="50"></textarea>
             <button type="submit">Dodaj</button>
         </div>
@@ -26,8 +26,8 @@
             <span>Zrobione</span>
         {% endif %}
 
-        <a href="/">Zmień status</a>
-        <a href="/">Skasuj</a>
+        <a href="/update/{{task.id}}">Zmień status</a>
+        <a href="/delete/{{task.id}}">Skasuj</a>
 
 
     {% endfor %}
