pierwsze style css

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
 <body>
 
 
-
-    <h1>DO ZROBIENIA</h1>
-
+    <div id="header">
+    <h1 id="green">DO</h1> <h1 id="white">ZROBIENIA</h1>
+    </div>
     <form action="/add" method="post">
         <div>
             <label for="title">Zadanie do wykonania</label> <br>
