--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,2 +1,66 @@
+* {
+    margin: 0px;
+    padding: 00px;
+    box-sizing: border-box;
+}
 
+body {
+    background: black;
+}
 
+/* sekcja naglowka */
+
+#header {
+    margin: 60px;
+}
+
+h1{
+    font-size: 60px;
+    text-align: center;
+}
+
+#green {
+    color: green;
+}
+
+#white {
+    color: white;
+}
+
+/* formularz */
+
+label {
+  font-size: 20px;
+  margin: 15px;
+  color: white;
+  display: inline-block;
+  }
+
+form {
+    text-align: center;
+}
+
+input, textarea {
+  float: center;
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid white;
+  border-radius: 4px;
+}
+
+button {
+  margin: 15px;
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 50%;
+}
+
+button:hover {
+  background-color: #45a049;
+}
